--- a/package.json
+++ b/package.json
@@ -29,30 +29,29 @@
     },
     "homepage": "https://github.com/nik-neg/metallic-button#readme",
     "dependencies": {
+        "@storybook/experimental-addon-test": "^8.6.14",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
-        "styled-components": "^6.1.8"
+        "styled-components": "^6.1.8",
+        "vitest": "^3.2.2"
     },
     "devDependencies": {
-        "@types/react": "^18.2.55",
-        "@types/react-dom": "^18.2.19",
-        "@types/styled-components": "^5.1.34",
-        "typescript": "^5.3.3",
-        "vite": "^5.1.3",
         "@eslint/js": "^8.57.0",
-        "storybook": "^8.4.7",
         "@storybook/addon-essentials": "^8.4.7",
         "@storybook/addon-interactions": "^8.4.7",
-        "@storybook/blocks": "^8.4.7",
-        "@storybook/react": "^8.4.7",
-        "@storybook/react-vite": "^8.4.7",
         "@storybook/addon-onboarding": "^8.4.7",
         "@storybook/addon-themes": "^8.4.7",
+        "@storybook/blocks": "^8.4.7",
         "@storybook/manager-api": "^8.4.7",
+        "@storybook/react": "^8.4.7",
+        "@storybook/react-vite": "^8.4.7",
         "@storybook/test": "^8.4.7",
         "@storybook/theming": "^8.4.7",
         "@types/lodash": "^4.17.15",
+        "@types/react": "^18.2.55",
+        "@types/react-dom": "^18.2.19",
+        "@types/styled-components": "^5.1.34",
         "@typescript-eslint/eslint-plugin": "5.62.0",
         "@typescript-eslint/parser": "5.62.0",
         "eslint": "^8.57.0",
@@ -61,9 +60,12 @@
         "eslint-plugin-storybook": "^0.11.2",
         "globals": "^15.15.0",
         "lint-staged": "^15.3.0",
+        "prettier": "^2.8.8",
+        "storybook": "^8.4.7",
         "tsc-alias": "^1.8.10",
         "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.3.3",
         "typescript-eslint": "^8.32.1",
-        "prettier": "^2.8.8"
+        "vite": "^5.1.3"
     }
 }
