--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,6 @@
+# Workflow name
+name: Build and Publish Storybook to GitHub Pages
+
 on:
     push:
         branches:
@@ -12,7 +15,15 @@ jobs:
     deploy:
         runs-on: ubuntu-latest
         steps:
-            - id: build-publish
-              uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+            - uses: actions/checkout@v4
               with:
-                  path: build # change to your build folder
+                  fetch-depth: 0
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: '20'
+            - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
+              with:
+                  install_command: npm ci
+                  build_command: npm run build-storybook
+                  path: storybook-static
+                  checkout: false
